Actions
Bug #10788
closedsha1: NULL pointer errors
Start date:
2019-04-14
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
NULL pointer errors:
In file included from ../../common/sys/param.h:48:0, from ../../common/sys/t_lock.h:38, from ../../common/sys/thread.h:36, from ../../common/sys/modctl.h:35, from ../../common/crypto/io/sha1_mod.c:27: ../../common/sys/null.h:32:14: error: initialization makes integer from pointer without a cast [-Werror=int-conversion] #define NULL ((void *)0) ^ ../../common/crypto/io/sha1_mod.c:197:56: note: in expansion of macro 'NULL' static crypto_kcf_provider_handle_t sha1_prov_handle = NULL; ^~~~ cc1: all warnings being treated as errors
Updated by Electric Monk about 3 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 1769ed96fc4e53d756a18c13134b3eb443ef4882
commit 1769ed96fc4e53d756a18c13134b3eb443ef4882 Author: Toomas Soome <tsoome@me.com> Date: 2019-04-19T20:18:10.000Z 10788 sha1: NULL pointer errors Reviewed by: Andy Stormont <astormont@racktopsystems.com> Reviewed by: Sebastian Wiedenroth <sebastian.wiedenroth@skylime.net> Approved by: Dan McDonald <danmcd@joyent.com>
Actions