usr/src/uts/common/crypto/io/sha1_mod.c
@@ -194,7 +194,7 @@ static crypto_provider_info_t sha1_prov_info = {
 	sha1_mech_info_tab
 };
 
-static crypto_kcf_provider_handle_t sha1_prov_handle = NULL;
+static crypto_kcf_provider_handle_t sha1_prov_handle = 0;
 
 int
 _init()
